# anagrams

./: CHANGELOG.md  README.md  go.mod  permutations.go  permutations_test.go  pyproject.toml  search.go  signature.go  signature_test.go  subsets.go  subsets_test.go
anagrams/: anagrams.go  main.go
cmd/: main.go
dictionary/make_signatures/: main.go  make_signatures
docs/: design.md
setup/: main.go
src/anagrams/: __init__.py  build_sigmap.py  cli.py
src/anagrams/adapters/: __init__.py  json_dictionary.py
src/anagrams/application/: __init__.py  search_service.py
src/anagrams/data/: __init__.py  sigmap.json
src/anagrams/domain/: __init__.py  permutations.py  signature.py  subsets.py
src/anagrams/ports/: __init__.py  dictionary_port.py
step1/: main.go  step1
tests/adapters/: test_json_dictionary.py
tests/application/: test_search_service.py
tests/domain/: test_permutations.py  test_signature.py  test_subsets.py
