[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anagrams"
version = "1.0.0"
description = "Find all valid English words whose letters are a subset of a given word"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
anagrams = "anagrams.cli:main"
build-sigmap = "anagrams.build_sigmap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anagrams = ["data/sigmap.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
